feat: log 경로 변경 profile 분기 설정

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -11,40 +11,43 @@ management:
       show-details: always
       probes:
         enabled: true
-  health:
-    db:
-      enabled: true
-    diskspace:
-      enabled: true
-    livenessstate:
-      enabled: true
-    readinessstate:
-      enabled: true
+      group:
+        liveness:
+          include: livenessState
+        readiness:
+          include: readinessState,db,ping
+#  health:
+#    db:
+#      enabled: true
+#    livenessstate:
+#      enabled: true
+#    readinessstate:
+#      enabled: true
 
 logging:
   config: classpath:logback-spring.xml
   level:
     org.springframework: info
-    sql: debug
+    sql: info
 
 spring:
   config:
     activate:
-      on-profile: stg
+      on-profile: dev
   datasource:
-    url: jdbc:mysql://mysql/petclinic
+#    url: jdbc:mysql://spring-petclinic-data-jdbc-mysql-1:3306/petclinic
+    url: jdbc:mysql://mysql:3306/petclinic
     username: root
     password: petclinic
-
   test:
     database:
       replace: none
-
   messages:
     basename: messages/messages
-
   web:
     resources:
       cache:
         cachecontrol:
           max-age: 12h
+  lifecycle:
+    timeout-per-shutdown-phase: 20s
