--- a/build.gradle
+++ b/build.gradle
@@ -66,7 +66,8 @@ tasks.withType(Javadoc) {
 
 jib {
     from {
-        image = 'registry://public.ecr.aws/docker/library/eclipse-temurin:17.0.7_7-jdk-focal'
+//        image = 'registry://public.ecr.aws/docker/library/eclipse-temurin:17.0.7_7-jdk-focal'
+        image = 'registry://raphael1021/eclipse-temurin:17.0.7_7-jdk-focal'
         platforms {
             platform {
                 architecture = 'amd64'
@@ -84,8 +85,8 @@ jib {
 
     container {
         mainClass = 'org.springframework.samples.petclinic.PetClinicApplication'
-//        entrypoint = ["java", "-Duser.timezone=Asia/Seoul", "-jar", "/app/spring-petclinic-data-jdbc-3.0.0.BUILD-SNAPSHOT.jar"]
-        appRoot = '/app'
+        user = '1000'
+        ports = ['8080']
     }
 
 //    useDockerClient = true
