fix: docker-compose 실행시 app에는 mysql 의존성이 필요한데 depends_on으로는 이 시간을 만족할 수 없기에 restart 옵션을 추가한다.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     image: raphael1021/spring-petclinic-data-jdbc:jib
     ports:
       - "8080:8080"
+    restart: always
     user: "1000:1000"
   mysql:
     container_name: mysql
