--- a/manifests/app/overlays/kustomization.yaml
+++ b/manifests/app/overlays/kustomization.yaml
@@ -1,5 +1,14 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: test
+namespace: default
+patches:
+  - target:
+      kind: Deployment
+      name: spring-petclinic
+      version: v1
+    path: PatchDeployment.yaml
+replicas:
+  - name: spring-petclinic
+    count: 2
 resources:
   - ../base
